<resources>
    <string name="app_name">梵森联盟</string>
    <string name="tabbar_bottom_home">首页</string>
    <string name="tabbar_bottom_super_voucher">超级券</string>
    <string name="tabbar_bottom_mine">我的</string>
    <string name="mainframe_whethertoquit">再按一次退出</string>
    <!--首页-->
    <string name="home_middle_female">女装</string>
    <string name="home_middle_male">男装</string>
    <string name="home_middle_underclothes">内衣</string>
    <string name="home_middle_cosmetics">美妆</string>
    <string name="home_middle_cate">美食</string>
    <string name="home_middle_baby">母婴</string>
    <string name="home_middle_furniture">家具</string>
    <string name="home_middle_other">其他</string>
    <string name="home_goods_voucher_price">券后价</string>
    <string name="home_goods_money_unit">￥</string>
    <string name="home_goods_money">元</string>
    <string name="home_goods_sale">月销</string>
    <string name="home_goods_sale_num">件</string>
    <string name="get_goods_failed">获取商品失败</string>
    <string name="home_middle_like">猜你喜欢</string>

    <!-- loading 加载 -->
    <string name="text_gif_loading">加载中</string>
    <string name="hint_input_job_num">请输入工号</string>
    <string name="hint_input_goods_keywords">请输入商品关键字</string>
    <string name="hint_input_phone_num">请输入手机号</string>
    <string name="phone_is_error">请输入正确的手机号</string>
    <string name="hint_input_name">请输入用户名</string>
    <string name="name_is_empty">用户名不能为空</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="hint_input_password_length">请输入密码(6~16个字符)</string>
    <string name="hint_input_referee_num">请输入推荐人账号</string>
    <string name="job_number">工号:</string>
    <string name="password">密码:</string>
    <string name="username">姓名:</string>
    <string name="logon_in_with_password">账号密码登录</string>
    <string name="logon_in">登录</string>
    <string name="submit">提交</string>
    <string name="user">用户</string>
    <string name="register_at_once">免费注册</string>
    <string name="username_is_empty">手机号不能为空</string>
    <string name="username_is_error">用户名错误</string>
    <string name="password_is_error">密码错误</string>
    <string name="referee_acount_is_null">推荐码不能为空</string>
    <string name="log_off">退出登录</string>
    <string name="my_asset">我的资产</string>
    <string name="register_info">提示:手机端暂不支持密码修改,请您牢记密码!</string>
    <string name="network_error">网络异常</string>
    <string name="network_unknown_host_error">域名错误或域名服务器异常</string>
    <string name="network_socket_timeout_error">网络连接超时</string>

    <!--我的-->
    <string name="device_num">资产编号:</string>
    <string name="asset_name">资产名称:</string>
    <string name="process_mode">认证状态:</string>
    <string name="authenticated">已认证</string>
    <string name="unauthorized">未认证</string>
    <string name="qrcode_authenticate">(扫码认证)</string>
    <string name="realplace">实际存储地点:</string>
    <string name="real_person">实际保管人:</string>
    <string name="part_name">部门名称:</string>
    <string name="get_myasset_failed">获取资产信息失败</string>
    <string name="asset_list_no_data">暂无数据</string>
    <string name="check_asset_no_more">已加载全部数据</string>
    <string name="asset_detail">资产详情</string>
    <!--登录注册-->
    <string name="login_failed">登录失败</string>
    <string name="login_failed_no_username">对不起，用户不存在</string>
    <string name="login_failed_no_password">对不起，密码不正确</string>
    <string name="register_failed">注册失败</string>
    <string name="please_input_username">请输入用户名</string>
    <string name="register_info_one">1.超多淘宝优惠券，直接省钱</string>
    <string name="register_info_two">2.喜欢就分享吧，还能赚钱!</string>
    <string name="register_has_count">已有账号?</string>
    <string name="register_direct_login">直接登录</string>
    <string name="register_exist">该用户已存在</string>
    <string name="register_invite_num_error">邀请码不正确</string>
    <!--dialog-->
    <string name="common_dialog_hint">提示</string>
    <string name="common_dialog_cancel">取消</string>
    <string name="common_dialog_ok">确认</string>


    <!--商品详情-->
    <string name="goods_info_title">商品详情</string>
    <string name="goods_info_use_explain">使用说明</string>
    <string name="goods_info_use_explain_info">复制文字或者点击一键复制按钮，打开[手淘APP]领卷下单</string>
    <string name="goods_info_one_key_copy">一键复制</string>
    <string name="goods_info_error">暂无优惠卷</string>
    <string name="goods_info_to_taobao">直接领券</string>


    <!--商品搜索-->
    <string name="goods_search">商品搜索</string>
    <string name="goods_search_text">搜索</string>

    <!--我的界面-->
    <string name="mine_money_balance">积分</string>
    <string name="mine_money_in_the_present">提现中</string>
    <string name="mine_money_has_present">已提现</string>
    <string name="mine_my_order">我的订单</string>
    <string name="mine_my_order_find">找回订单</string>
    <string name="mine_my_order_find_hint">请输入订单号</string>
    <string name="mine_my_order_find_text">找回</string>
    <string name="ming_record_of_income">收入记录</string>
    <string name="ming_present_record">提现记录</string>
    <string name="mine_immediate_cash">立即提现</string>
    <string name="ming_share">分享</string>
    <string name="ming_bound_alipay">绑定</string>
    <string name="ming_contact_us">联系我们</string>
    <string name="ming_user_img">头像</string>
    <string name="ming_user_nickname">昵称</string>
    <string name="mine_user_alipay">支付宝账号</string>
    <string name="mine_user_unbound">未绑定</string>
    <string name="mine_user_bound">已绑定</string>
    <string name="mine_user_info">个人信息</string>
    <string name="mine_bound_alipay">设置支付宝</string>
    <string name="mine_bound_alipay_ok">确定</string>
    <string name="mine_bound_alipay_hint_attention">注意事项</string>
    <string name="mine_bound_alipay_hint">请输入正确的支付宝账号,错误的账号将收不到返利!</string>
    <string name="mine_bound_alipay_input_hint">请输入支付宝账号</string>
    <string name="mine_bound_alipay_no">您还没有绑定支付宝!</string>
    <string name="mine_bound_alipay_current">您当前账号为:</string>

    <string name="mine_wallet">积分</string>
    <string name="my_money_balance">我的积分</string>
    <string name="mine_wallet_present">提现</string>
    <string name="present_moneny">提现积分</string>
    <string name="present_moneny_able">可提取积分</string>
    <string name="present_all">全部提现</string>
    <string name="please_input_present_moneny">请输入要提现的积分</string>
    <string name="please_input_alipayaccount">请输入支付宝账号</string>
    <string name="please_input_alipayaccount_error">请输入正确的支付宝账号</string>
    <string name="please_input_user_name">请输入用户名</string>
    <string name="please_input_user_error">设置用户名失败</string>
    <string name="bound_fail">绑定失败</string>
    <string name="present_fail">提现失败</string>
    <string name="present_ok">确认提现</string>
    <string name="present_moneny_overrun">提现积分超限</string>
    <string name="present_moneny_min">最小的提现积分为1000</string>
    <string name="present_moneny_null">没有积分可以提现</string>
    <string name="tack_picture">拍照</string>
    <string name="pick_picture">从相册选择</string>
    <string name="active_income">主动收入</string>
    <string name="passive_income">被动收入</string>
    <string name="get_record_failed">获取记录失败</string>
    <!--修改密码-->
    <string name="user_password">密码</string>
    <string name="modify_password">修改密码</string>
    <string name="user_original_pwd">原密码:</string>
    <string name="user_new_pwd">新密码:</string>
    <string name="user_confirm_pwd">确认密码:</string>
    <string name="user_confirm_modify">确认修改</string>
    <string name="hint_input_original_pwd">请输入原密码</string>
    <string name="hint_input_new_pwd">请输入新密码</string>
    <string name="original_pwd_is_error">原密码有误</string>
    <string name="new_pwd_is_error">两次密码不一致</string>
    <string name="new_pwd_is_equals_original_pwd">新密码和原密码一致</string>
    <string name="modify_pwd_fail">修改密码失败</string>
    <string name="modify_pwd_success">修改密码成功</string>
    <string name="password_is_empty">密码不能为空</string>
    <string name="password_is_short">密码长度必须为6~16个字符</string>

    <!--修改用户名-->
    <string name="hint_input_nickname">请输入用户名</string>
    <string name="modify_nickname">修改用户名</string>
    <!--订单-->
    <string name="my_order_get_failed">获取订单失败</string>
    <string name="my_order_get_no_more">没有更多订单</string>
    <string name="my_order_id">订单编号:</string>
    <string name="my_order_time">下单时间:</string>
    <string name="my_order_time_earn">结算时间:</string>
    <string name="my_order_success">订单成功</string>
    <string name="my_order_fail">订单失效</string>
    <string name="my_order_already_settled">已结算</string>
    <string name="my_order_already_paid">已付款</string>
    <!--分享界面-->
    <string name="share_title">分享</string>
    <string name="share_app">分享APP</string>
    <string name="share_to_invite">分享推荐码</string>
    <string name="share_to_invite_title">邀请码</string>
    <string name="share_to_invite_code">邀请码:</string>
    <string name="share_to_invite_code_copy">复制邀请码</string>
    <string name="share_to_invite_code_description">赶紧邀请你的好友加入吧，你的好友使用此邀请码进行注册，你能得到更多积分哦</string>
    <string name="share_app_description">分享APP的下载连接,方便好友下载,请注意:\n1、微信需转到浏览器下载\n2、在APP注册需要填写推荐人,即填写好友分享的推荐码</string>
    <string name="share_qq">QQ</string>
    <string name="share_wechat">微信</string>
    <string name="share_please_install">请先安装</string>
    <string name="device_share_msgTitle">可分享的应用</string>
    <string name="video_update_fail">上传失败</string>
    <string name="video_update_sucess">上传成功</string>
    <string name="get_userinfo_failed">获取信息失败</string>
    <string name="share_copy_error">复制失败</string>
    <string name="share_copy_success">复制成功</string>
    <string name="no_taobao">请先安装淘宝APP客户端</string>

    <!--找回订单-->
    <string name="find_my_order_null">请输入要找回的订单号</string>
    <string name="find_my_order_error">找回订单失败</string>
    <string name="find_my_order_no_have">对不起，没有该订单</string>
    <string name="find_my_order_have">对不起，该订单已被认领</string>
    <string name="find_my_order_success">找回订单成功</string>
    <string name="find_my_order_max">对不起，已达到最大订单数</string>
    <string name="find_my_order_good_name">商品名称:</string>

    <!--联系我们-->
    <string name="contact_us_title">联系我们</string>
    <string name="contact_us_about_qq">梵森联盟QQ群</string>
    <string name="contact_us_about_num">QQ群号:721023665</string>
    <string name="contact_us_tip">服务时间: 周一到周五 9:00 - 18:00</string>
</resources>
