<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/title_bar"
            android:layout_width="fill_parent"
            android:background="@color/login_title_color"
            android:layout_height="50dp">
            <!-- 返回 -->
            <LinearLayout
                android:id="@+id/ll_title_left"
                android:layout_width="45dp"
                android:layout_alignParentLeft="true"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/img_back"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/register_at_once"
                android:textColor="@color/optiontext_color_black"
                android:textSize="16dp" />
            <View
                android:layout_alignParentBottom="true"
                android:background="@color/line_color"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
        </RelativeLayout>
        <!--手机号-->
        <RelativeLayout
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginTop="27dp"
            android:background="@drawable/bg_logon_input"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:id="@+id/img_job_num"
                android:layout_centerVertical="true"
                android:layout_width="18dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/register_job_id"
                android:gravity="center_vertical"
                android:layout_height="23dp" />
           <EditText
               android:id="@+id/edit_user_name"
               android:background="@null"
               android:layout_toRightOf="@+id/img_job_num"
               android:layout_marginLeft="6dp"
               android:inputType="number"
               android:singleLine="true"
               android:textSize="15dp"
               android:textColorHint="@color/hint_text_color"
               android:hint="@string/hint_input_phone_num"
               android:layout_width="match_parent"
               android:layout_height="match_parent" />

        </RelativeLayout>
        <!--密码-->
        <RelativeLayout
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_logon_input"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:id="@+id/txt_name"
                android:layout_centerVertical="true"
                android:layout_height="23dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/register_username"
                android:gravity="center_vertical"
                android:layout_width="18dp" />

                <EditText
                    android:id="@+id/edit_password"
                    android:background="@null"
                    android:textSize="15dp"
                    android:layout_toRightOf="@+id/txt_name"
                    android:hint="@string/hint_input_password_length"
                    android:maxLength="16"
                    android:layout_marginLeft="6dp"
                    android:textColorHint="@color/hint_text_color"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
        </RelativeLayout>
        <!--推荐人号码-->
        <RelativeLayout
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_logon_input"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:src="@drawable/register_password"
                android:id="@+id/txt_user_password"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_width="18dp"
                android:gravity="center_vertical"
                android:layout_height="23dp" />

            <EditText
                android:id="@+id/edit_referee_acount"
                android:background="@null"
                android:singleLine="true"
                android:inputType="textPassword"
                android:textSize="15dp"
                android:maxLength="6"
                android:layout_toRightOf="@+id/txt_user_password"
                android:layout_marginLeft="6dp"
                android:textColorHint="@color/hint_text_color"
                android:hint="@string/hint_input_referee_num"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            </RelativeLayout>
        <!--注册-->
        <TextView
            android:id="@+id/txt_register"
            android:background="@drawable/bg_logon_corner"
            android:textColor="@color/white"
            android:text="@string/submit"
            android:layout_below="@+id/ll_password"
            android:textSize="18dp"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="45dp">
            <TextView
                android:text="@string/register_has_count"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/txt_direct_login"
                android:text="@string/register_direct_login"
                android:gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:textColor="@color/login_register"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>
    <!--提示信息-->
     <LinearLayout
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="30dp"
         android:layout_centerHorizontal="true"
         android:orientation="vertical"
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
             android:text="@string/register_info_one"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
             android:text="@string/register_info_two"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <com.mobile.fsaliance.common.common.CircleProgressBarView
            android:id="@+id/circleProgressBarView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>
    </LinearLayout>
</RelativeLayout>
