<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@drawable/bg_select_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/picture_selector_take_photo_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/tack_picture"
            android:textColor="@color/optiontext_color_black"
            android:textSize="15sp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@color/line_color"/>
        <TextView
            android:id="@+id/picture_selector_pick_picture_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/pick_picture"
            android:textColor="@color/optiontext_color_black"
            android:textSize="15sp"
             />
        </LinearLayout>

        <TextView
            android:id="@+id/picture_selector_cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginBottom="15dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_select_photo"
            android:padding="10dp"
            android:text="@string/common_dialog_cancel"
            android:textColor="@color/optiontext_color_black"
            android:textSize="15sp"
             />
    </LinearLayout>

</RelativeLayout>